# speech-to-text

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  IMPLEMENTATION_GUIDE.md  PLUGIN_GUIDE.md  QUICKSTART.md  README.md  RUNNING.md  RUNNING_WINDOWS.md  SETUP_GUIDE.md  demo_overlay.py  download_model.py  installer.iss  launcher.py  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  setup.py  stt-keyboard.spec  test_integration.py  test_overlay.py  test_state_manager.py
.github/workflows/: build.yml
plugins/: auto_punctuation.py  emoji_converter.py
scripts/: build_exe.py
src/stt_keyboard/: __init__.py  __main__.py  app.py
src/stt_keyboard/config/: __init__.py  config_manager.py  default_config.yaml  models.py
src/stt_keyboard/core/: __init__.py  audio_capture.py  hotkey_manager.py  keyboard_simulator.py  speech_engine.py  state_manager.py
src/stt_keyboard/gui/: __init__.py  model_downloader.py  overlay_widget.py  settings_window.py  tray_icon.py
src/stt_keyboard/plugins/: __init__.py  plugin_interface.py  plugin_loader.py
src/stt_keyboard/plugins/builtin/: __init__.py
src/stt_keyboard/utils/: __init__.py  logger.py  platform_utils.py
